# Lawteork

./: .gitignore  64 bit external offset (2).cpp  README.md  SUMMARY.md  WORK_SUMMARY.md  build.gradle  gradle.properties  settings.gradle  ИСПРАВЛЕНИЕ_APK.md  СБОРКА_ЗАВЕРШЕНА.md
apk_analysis/: classes2.dex  classes3.dex
apk_decompiled/: apktool.yml
apk_decompiled/original/: AndroidManifest.xml
apk_decompiled/res/drawable/: background_country.xml  blue.xml  checkbox_unchecked.xml  cicrle.xml  draw009a.xml  ic_androidide_log.xml  ic_checkmark.xml  ic_logo_placeholder.xml  ic_paste.xml  line.xml  security.xml  spinner_popup_background_dark.xml
apk_decompiled/res/layout/: activity_main.xml  layout0031.xml
apk_decompiled/res/values/: attrs.xml  dimens.xml  public.xml  strings.xml  (+1 more)
apk_decompiled/res/values-af/: strings.xml
apk_decompiled/res/values-ar/: plurals.xml
apk_decompiled/res/values-be/: plurals.xml
apk_decompiled/res/values-bg/: plurals.xml  strings.xml
apk_decompiled/res/values-bn/: plurals.xml
apk_decompiled/res/values-bs/: plurals.xml  strings.xml
apk_decompiled/res/values-ca/: plurals.xml  strings.xml
apk_decompiled/res/values-da/: plurals.xml  strings.xml
apk_decompiled/res/values-de/: strings.xml
apk_decompiled/res/values-el/: strings.xml
apk_decompiled/res/values-en-rCA/: strings.xml
apk_decompiled/res/values-en-rGB/: strings.xml
apk_decompiled/res/values-en-rIN/: strings.xml
apk_decompiled/res/values-en-rXC/: strings.xml
apk_decompiled/res/values-es/: plurals.xml
apk_decompiled/res/values-es-rUS/: strings.xml
apk_decompiled/res/values-eu/: plurals.xml
apk_decompiled/res/values-fa/: plurals.xml
apk_decompiled/res/values-fi/: strings.xml
apk_decompiled/res/values-fr/: plurals.xml  strings.xml
apk_decompiled/res/values-fr-rCA/: strings.xml
apk_decompiled/res/values-gl/: plurals.xml  strings.xml
apk_decompiled/res/values-gu/: plurals.xml
apk_decompiled/res/values-hu/: plurals.xml  strings.xml
apk_decompiled/res/values-hy/: plurals.xml  strings.xml
apk_decompiled/res/values-it/: plurals.xml  strings.xml
apk_decompiled/res/values-iw/: plurals.xml
apk_decompiled/res/values-ja/: plurals.xml
apk_decompiled/res/values-ka/: strings.xml
apk_decompiled/res/values-kk/: plurals.xml
apk_decompiled/res/values-km/: plurals.xml
apk_decompiled/res/values-kn/: plurals.xml
apk_decompiled/res/values-ko/: plurals.xml  strings.xml
apk_decompiled/res/values-ky/: strings.xml
apk_decompiled/res/values-lo/: plurals.xml  strings.xml
apk_decompiled/res/values-lt/: plurals.xml
apk_decompiled/res/values-lv/: plurals.xml  strings.xml
apk_decompiled/res/values-ml/: plurals.xml
apk_decompiled/res/values-mn/: plurals.xml
apk_decompiled/res/values-mr/: plurals.xml  strings.xml
apk_decompiled/res/values-ms/: plurals.xml
apk_decompiled/res/values-my/: plurals.xml  strings.xml
apk_decompiled/res/values-nb/: plurals.xml
apk_decompiled/res/values-ne/: strings.xml
apk_decompiled/res/values-or/: strings.xml
apk_decompiled/res/values-pa/: plurals.xml
apk_decompiled/res/values-pl/: plurals.xml  strings.xml
apk_decompiled/res/values-pt-rPT/: plurals.xml
apk_decompiled/res/values-ru/: plurals.xml
apk_decompiled/res/values-sr/: plurals.xml  strings.xml
apk_decompiled/res/values-sv/: plurals.xml  strings.xml
apk_decompiled/res/values-sw/: plurals.xml
apk_decompiled/res/values-te/: plurals.xml  strings.xml
apk_decompiled/res/values-th/: plurals.xml  strings.xml
apk_decompiled/res/values-tl/: plurals.xml
apk_decompiled/res/values-tr/: plurals.xml
apk_decompiled/res/values-uk/: plurals.xml
apk_decompiled/res/values-ur/: plurals.xml  strings.xml
apk_decompiled/res/values-uz/: strings.xml
apk_decompiled/res/values-vi/: plurals.xml
apk_decompiled/res/values-zh/: strings.xml
apk_decompiled/res/values-zh-rCN/: strings.xml
apk_decompiled/res/values-zh-rTW/: plurals.xml  strings.xml
apk_decompiled/res/values-zu/: plurals.xml
app/: build.gradle  proguard-rules.pro  release.keystore
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/android/cheat/: aimbot.cpp  aimbot.hpp  bullet.cpp  bullet.hpp  cheat.cpp  cheat.hpp
app/src/main/cpp/android/esp/: esp.cpp  esp.hpp
app/src/main/cpp/android/overlay/: overlay.cpp  overlay.hpp
app/src/main/cpp/include/blackbox/: blackbox.hpp  types.hpp  utils.hpp
app/src/main/cpp/include/client/: api_server.hpp  client.hpp  network.hpp  security.hpp  types.hpp
app/src/main/cpp/jni/: jni_interface.cpp  jni_interface.hpp
app/src/main/cpp/src/blackbox/: CMakeLists.txt  blackbox.cpp  impl_core.cpp  impl_security.cpp  impl_utils.cpp
app/src/main/cpp/src/client/: CMakeLists.txt  api_server.cpp  client.cpp  network.cpp  security.cpp
Оригапк/: Туторигапк
тутапк/: BUILD_INFO.txt  BUILD_REPORT.md  README.md  README.txt  changelog.txt  СБОРКА.txt  УСТАНОВКА.txt
(+6940 files in other folders)
